fix: fixed course page

--- a/package.json
+++ b/package.json
@@ -75,16 +75,19 @@
     "invariant": "2.2.4",
     "ip": "1.1.5",
     "lodash": "4.17.11",
+    "material-auto-rotating-carousel": "^3.0.2",
     "minimist": "1.2.0",
     "prop-types": "15.7.2",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-helmet": "6.0.0-beta",
     "react-intl": "2.8.0",
+    "react-material-ui-carousel": "^2.2.1",
     "react-redux": "7.0.2",
     "react-responsive-multi-level-menu": "^2.2.5",
     "react-router-dom": "5.0.0",
     "react-step-progress": "^1.0.3",
+    "react-swipeable-views": "^0.13.9",
     "redux": "4.0.1",
     "redux-saga": "1.0.2",
     "reselect": "4.0.0",
